# echolalia

./: .gitignore  Dockerfile  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  run.py  workbook.ipynb
echolalia/: __init__.py  _utils.py  chat.py  constants.py  contextualizer.py  parser.py  run_sagemaker.py  train.py  training_manifest.yaml
notebooks/: demo.ipynb  sagemaker.ipynb
tf/: ecr.tf  iam.tf  main.tf  s3.tf  sagemaker.tf  terraform.tfstate  variables.tf
