[tool.poetry]
name = "echolalia"
version = "0.1.0"
description = "A familiar voice"
authors = ["Selwyn-Lloyd McPherson <selwyn.mcpherson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
boto3 = "^1.35.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
