[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "echolalia"
version = "0.1.0"
description = "A familiar voice"
authors = ["Selwyn-Lloyd McPherson <selwyn.mcpherson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
boto3 = "^1.35.22"
ruff = "^0.6.5"

[tool.black]
line-length = 110
include = '\.py$'
exclude = '\.envs/*'

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".envs", "tests"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "PD",  # pandas-vet
  "W",   # pycodestyle
  "SIM", # flake8-simplify
  "NPY", # numpy-specific
]
# Avoid enforcing docstring style
ignore = ["D212"]

[tool.ruff.format]
quote-style = "double"